fix: align tooltip text on the left

--- a/src/app/components/Tooltip/Tooltip.module.css
+++ b/src/app/components/Tooltip/Tooltip.module.css
@@ -17,6 +17,7 @@
   background-color: #56575e;
   color: white;
   font-size: smaller;
+  text-align: left;
 }
 
 .tooltip:hover .tooltip-text {
